version/0.17/_sources/api/solver/_autosummary/settings/rans_les_interface.rst.txt
:orphan:

.. _rans_les_interface:

rans_les_interface
==================

.. autoclass:: ansys.fluent.core.solver.settings_232.rans_les_interface.rans_les_interface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`rans_les_interface_child <rans_les_interface_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

